@@ -4,8 +4,6 @@ Michael Durrant VE3PNX <mdurrant@arcturusnetworks.com>
 D. Jeff Dionne VE3DJF <Jeff@lnx_rpi.ee.ryerson.ca>
 Rob Mayfield VK5XXX/VK5ZEU <mayfieldrob@mail.dec.com>
 Terry Dawson VK2KTJ <terry@animats.net>
-Cathryn Mataga <cathryn@junglevision.com>
-Steve Fraser VK5ASF
 
 ax25rtd:
 Joerg Reuter <jreuter@poboxes.com>
